[package]
name = "beluga"
version = "0.1.0"
edition = "2021"
default-run = "beluga"

[[bin]]
name = "beluga"
path = "beluga-app/src/bin/beluga.rs"

[dependencies]
beluga-app = { path = "./beluga-app" }
beluga-core = { path = "./beluga-core" }

[workspace]
members = ["beluga-app", "beluga-core"]

[workspace.dependencies]
iced = { git = "https://github.com/iced-rs/iced.git", branch = "master", features = [
    "highlighter",
    "tokio",
    "debug",
    "canvas",
] }
tokio = { version = "1.36.0", features = ["fs"] }

rfd = "0.13"

# database clients
mysql = "24.0.0" # mysql
postgres = "0.19.7" # postgres
prusto = { version = "0.5", features = ["presto"] } # trino
